app1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/iankwatts-tools/test10:latest
        name: app1
        ports:
        - containerPort: 80
