app1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  ports:
  - port: 80
    targetPort: 9999
  - port: 443
    targetPort: 9999
  selector:
    app: app1
